--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
                     <div class="status-indicator">
                       <div class="w-4 h-4 rounded-full pulse-animation" style="background-color: ${config.color}"></div>
                     </div>
-                    <p class="text-gray-300 text-lg font-medium">专业量化交易系统</p>
+                    <p class="text-gray-300 text-lg font-medium">Unispark专业量化交易系统</p>
                   </div>
                 </div>
               </div>
